fix sidebar menu itens align

--- a/stubs/resources/css/components/p-overrides.css
+++ b/stubs/resources/css/components/p-overrides.css
@@ -4,6 +4,10 @@
 }
 
 /* dialog */
+.p-dialog-mask.p-component-overlay {
+    z-index: 99;
+}
+
 .p-confirm-dialog .p-confirm-dialog-accept {
     background: theme(colors.skin.error.DEFAULT);
     border: theme(colors.skin.error.focus);
@@ -24,12 +28,16 @@
 }
 
 /* sidebar */
+.p-sidebar {
+    z-index: 98 !important;
+}
+
 .p-sidebar-left {
     width: 16rem !important;
 }
 
 .p-sidebar .p-sidebar-header {
-    padding: 0.9rem 0.75rem;
+    padding: 0;
 }
 
 .p-sidebar .p-sidebar-content {
